--- a/FrontEnd/CSS/Settings/Settings.css
+++ b/FrontEnd/CSS/Settings/Settings.css
@@ -21,6 +21,11 @@
   padding: 0;
   margin: 0;
   font-family: "font-text";
+  font-size: 16px;
+}
+
+body {
+  background: var(--color1);
 }
 
 h1,
