Ajout style mainPage

--- a/FrontEnd/CSS/MainStyle.css
+++ b/FrontEnd/CSS/MainStyle.css
@@ -1,3 +1,4 @@
 @import url(./Settings/Settings.css);
 @import url(./Settings/Btn.css);
 @import url(./Pages/SearchBar.css);
+@import url(./Pages/DisplayAllCard.css);
