--- a/FrontEnd/CSS/Settings/Settings.css
+++ b/FrontEnd/CSS/Settings/Settings.css
@@ -37,12 +37,13 @@ body {
 }
 
 .main-section {
-  height: 120vh;
+  height: 65vh;
 }
 
 .footer-section {
   height: 15vh;
   width: 100%;
+  margin-top: 5%;
   background-color: var(--color5);
   display: flex;
   justify-content: center;
