--- a/FrontEnd/CSS/Settings/Settings.css
+++ b/FrontEnd/CSS/Settings/Settings.css
@@ -31,9 +31,14 @@ body {
 .header-section {
   height: 10vh;
   width: 100%;
+  padding: 0 5%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
+}
+
+.title-main-page {
+  font-size: 24px;
 }
 
 .main-section {
