--- a/FrontEnd/CSS/MainStyle.css
+++ b/FrontEnd/CSS/MainStyle.css
@@ -1,4 +1,5 @@
 @import url(./Settings/Settings.css);
 @import url(./Settings/Btn.css);
-@import url(./Pages/SearchBar.css);
-@import url(./Pages/DisplayAllCard.css);
+@import url(./Compenent/SearchBar.css);
+@import url(./Compenent/DisplayAllCard.css);
+@import url(./Compenent/Card.css);
