--- a/FrontEnd/CSS/Settings/Btn.css
+++ b/FrontEnd/CSS/Settings/Btn.css
@@ -5,7 +5,7 @@
 }
 
 .more-info-btn {
-  margin: 10% 20% 5% 20%;
+  margin: 20% auto;
   font-size: 20px;
   padding: 5%;
   background-color: var(--color3);
