Réorganisation des fichiers CSS

--- a/FrontEnd/CSS/MainStyle.css
+++ b/FrontEnd/CSS/MainStyle.css
@@ -1,5 +1,6 @@
 @import url(./Settings/Settings.css);
-@import url(./Settings/Btn.css);
+@import url(./Compenent/Header.css);
 @import url(./Compenent/SearchBar.css);
 @import url(./Compenent/DisplayAllCard.css);
 @import url(./Compenent/Card.css);
+@import url(./Compenent/Footer.css);
