--- a/FrontEnd/CSS/Compenent/SearchBar.css
+++ b/FrontEnd/CSS/Compenent/SearchBar.css
@@ -1,7 +1,7 @@
 .section-recherche {
   display: flex;
   justify-content: space-around;
-  width: 60%;
+  width: 80%;
   padding: 2%;
   margin: 5% auto;
   background: white;
@@ -22,4 +22,9 @@
 .recherche-input {
   font-size: 24px;
   width: 50%;
+}
+
+#btn-reset-search {
+  font-size: 24px;
+  padding: 10%;
 }
