--- a/FrontEnd/CSS/Compenent/SearchBar.css
+++ b/FrontEnd/CSS/Compenent/SearchBar.css
@@ -1,30 +1,46 @@
 .section-recherche {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 80%;
   padding: 2%;
   margin: 5% auto;
   background: white;
   box-shadow: 0 0 4px 0 black;
-  border-radius: 5px;
+  border-radius: 15px;
 }
 
 .div-recherche-input {
   display: flex;
   align-items: center;
+  justify-content: flex-start;
 }
 
 .recherche-label {
   font-size: 24px;
-  margin-right: 3%;
+  margin-right: 5%;
 }
 
 .recherche-input {
   font-size: 24px;
-  width: 50%;
+}
+
+.input-text {
+  width: 60%;
+}
+
+.input-select {
+  margin-left: 5%;
 }
 
 #btn-reset-search {
   font-size: 24px;
-  padding: 10%;
+  padding: 1% 3%;
+  background: var(--color3);
+  border-radius: 15px;
+  transition: 0.3s;
+}
+
+#btn-reset-search:hover {
+  color: white;
+  background: brown;
 }
