Ajout de l'ID dans l'UR L pour le récup pour réaliser le GetById OK

--- a/FrontEnd/CSS/Settings/Settings.css
+++ b/FrontEnd/CSS/Settings/Settings.css
@@ -41,6 +41,11 @@ h6 {
   font-family: "font-title";
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 button {
   border: none;
   cursor: pointer;
