--- a/FrontEnd/CSS/MainStyle.css
+++ b/FrontEnd/CSS/MainStyle.css
@@ -3,4 +3,5 @@
 @import url(./Compenent/SearchBar.css);
 @import url(./Compenent/DisplayAllCard.css);
 @import url(./Compenent/Card.css);
+@import url(./Compenent/Details.css);
 @import url(./Compenent/Footer.css);
