Ajout des avis (pas fonctionnel)

--- a/FrontEnd/CSS/MainStyle.css
+++ b/FrontEnd/CSS/MainStyle.css
@@ -4,4 +4,5 @@
 @import url(./Compenent/DisplayAllCard.css);
 @import url(./Compenent/Card.css);
 @import url(./Compenent/Details.css);
+@import url(./Compenent/AjoutAvis.css);
 @import url(./Compenent/Footer.css);
