--- a/react-app-arnaud/src/components/header/mobile/HeaderMobile.module.css
+++ b/react-app-arnaud/src/components/header/mobile/HeaderMobile.module.css
@@ -12,13 +12,13 @@
 }
 
 .btn {
-  padding-right: 10%;
   background: none;
-  height: 20vw;
-  width: 10vh;
+  height: 10vw;
+  /* width: 5vh; */
+  margin-right: 10%;
   z-index: 3;
 }
 
 .icon {
-  height: 45%;
+  height: 100%;
 }
