--- a/react-app-arnaud/src/components/mainPage/allCard/AllCard.module.css
+++ b/react-app-arnaud/src/components/mainPage/allCard/AllCard.module.css
@@ -4,5 +4,23 @@
   border-radius: 15px;
   display: grid;
   grid-auto-columns: 1fr;
-  row-gap: 3%;
+}
+
+.divCard {
+  padding: 5%;
+  border-radius: 15px;
+  box-shadow: 0 0 4px 0 black;
+  background-color: var(--color2);
+  margin-bottom: 5%;
+}
+
+.btnAdd {
+  width: 100%;
+  height: 25vh;
+  background: none;
+}
+
+.icon {
+  background: none;
+  font-size: 200px;
 }
