--- a/react-app-arnaud/src/components/formEvent/FormEvent.module.css
+++ b/react-app-arnaud/src/components/formEvent/FormEvent.module.css
@@ -4,7 +4,7 @@ button{
     padding-top: 3%;
     border-radius: 8px;
     padding: 5% 15%;
-    margin: 5% auto;
+    margin: 5% 20%;
 }
 
 .formList{
@@ -22,6 +22,13 @@ label{
 }
 
 input{
-    padding: 5% 0% 0% 0%;
     width: 100%;
+    padding-bottom: 5%;
+    margin-bottom: 5%;
+}
+
+select{
+    width: 100%;
+    padding-bottom: 5%;
+    margin-bottom: 5%;
 }
