--- a/react-app-arnaud/src/components/addSalle/FormAddSalle.module.css
+++ b/react-app-arnaud/src/components/addSalle/FormAddSalle.module.css
@@ -5,7 +5,7 @@
   padding: 3%;
   box-shadow: 0 0 4px 0 black;
   border-radius: 15px;
-  height: 155vh;
+  height: 130vh;
 }
 
 .form {
@@ -58,10 +58,11 @@ input {
 }
 
 .btn {
-  padding: 5% 10%;
+  padding: 5% 20%;
   background-color: var(--color3);
   border-radius: 15px;
   font-size: 20px;
+  margin: 10% 0;
 }
 .divBtn {
   display: flex;
