--- a/react-app-arnaud/src/components/formEvent/FormEvent.module.css
+++ b/react-app-arnaud/src/components/formEvent/FormEvent.module.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 .button {
   font-size: xx-large;
   background-color: var(--color3);
@@ -6,7 +5,8 @@
   border-radius: 8px;
   padding: 5% 15%;
   margin: 5% 20%;
-=======
+}
+
 .buttonAjouter{
     font-size:xx-large;
     background-color: var(--color3);
@@ -14,7 +14,6 @@
     border-radius: 8px;
     padding: 5% 15%;
     margin: 5% 20%;
->>>>>>> Florian
 }
 
 .formList {
