--- a/react-app-arnaud/src/components/formEvent/FormEvent.module.css
+++ b/react-app-arnaud/src/components/formEvent/FormEvent.module.css
@@ -1,11 +1,3 @@
-.button {
-  font-size: xx-large;
-  background-color: var(--color3);
-  padding-top: 3%;
-  border-radius: 8px;
-  padding: 5% 15%;
-  margin: 5% 20%;
-}
 
 .buttonAjouter{
     font-size:xx-large;
@@ -28,13 +20,15 @@
 
 .readOnly {
   background-color: gainsboro;
+  width: 100%;
+  font-size: x-large;
 }
 
 .formDiv {
   margin-bottom: 5%;
 }
 
-label {
+.label {
   font-size: x-large;
 }
 
@@ -43,12 +37,14 @@ label {
   font-size: medium;
 }
 
-input {
-  width: 100%;
-  font-size: x-large;
+.select {
+    width: 100%;
+    font-size: x-large;
+    padding: 2%;
+    margin-top: 1%;
 }
 
-select {
+.input {
   width: 100%;
   font-size: x-large;
 }
