--- a/react-app-arnaud/src/pages/DetailPage.css
+++ b/react-app-arnaud/src/pages/DetailPage.css
@@ -3,7 +3,6 @@
     font-weight: 600;
     margin-bottom: 1rem;
     margin-top: 1rem;
-    color: #3d3d3d;
     margin: 3rem;
     text-align: left;
 }
@@ -21,7 +20,16 @@
     background-color:#fdfdfb; 
     border-radius: 15px;  
     /* box-shadow: 0 0 4px 0 black; */
-    transition: all 0.3s ease-in-out; 
-    margin: 0 auto;
+       margin: 0 auto;
     margin-top: -2rem; 
+}
+
+.boutton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10vh; /* Ceci est juste un exemple, ajustez la hauteur comme vous le souhaitez */
+
+
+    
 }
