--- a/react-app-arnaud/src/components/DetailSalle/CarteInteractive/carteInteractive.module.css
+++ b/react-app-arnaud/src/components/DetailSalle/CarteInteractive/carteInteractive.module.css
@@ -6,9 +6,7 @@
     justify-content: center; /* Centrer les éléments horizontalement dans le conteneur flex */
     align-items: center; /* Centrer les éléments verticalement dans le conteneur flex */
     margin-top: 1.2rem;
-    
     border-radius: 15px;
     box-shadow: 0 0 4px 0 black;
-    transition: all 0.3s ease-in-out;
+     z-index: 1;
 }
- 
