--- a/react-app-arnaud/src/pages/DetailPage.css
+++ b/react-app-arnaud/src/pages/DetailPage.css
@@ -18,8 +18,8 @@
     padding: 0 1rem;
     /* overflow: auto; */
     background-color:#fdfdfb; 
-    border-radius: 15px;  
-    /* box-shadow: 0 0 4px 0 black; */
+    border-radius: 15px;
+    box-shadow: 0 0 4px 0 black;
        margin: 0 auto;
     margin-top: -2rem; 
 }
@@ -52,8 +52,8 @@
     padding: 0 1rem;
     /* overflow: auto; */
     background-color:#fdfdfb; 
-    border-radius: 15px;  
-    /* box-shadow: 0 0 4px 0 black; */
+    /* border-radius: 15px;  
+    box-shadow: 0 0 4px 0 black; */
        margin: 0 auto;
     margin-top: -2rem; 
 }
