--- a/react-app-arnaud/src/components/mainPage/allCard/AllCard.module.css
+++ b/react-app-arnaud/src/components/mainPage/allCard/AllCard.module.css
@@ -16,11 +16,22 @@
 
 .btnAdd {
   width: 100%;
-  height: 25vh;
+  height: 100%;
   background: none;
 }
 
 .icon {
   background: none;
   font-size: 200px;
+}
+
+@media screen and (min-width: 768px) {
+  .div {
+    grid-template-columns: 1fr 1fr;
+    column-gap: 2%;
+  }
+
+  .btnAdd {
+    height: 100%;
+  }
 }
