--- a/react-app-arnaud/src/components/DetailSalle/bouttonModifierSupprimer/modifEvent.module.css
+++ b/react-app-arnaud/src/components/DetailSalle/bouttonModifierSupprimer/modifEvent.module.css
@@ -1,17 +1,15 @@
 .bouton {
     background-color: var(--color3);
     border: none;
-    padding: 10px 20px;
+    
+    padding: 25px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 16px;
-    margin-left: 10px;
-    margin-top: 10px;
     cursor: pointer;
     border-radius: 5px;
   }
-  
+/*   
   .bouton:hover {
     background-color:  #8c9c7c;;
   }
@@ -21,10 +19,4 @@
     box-shadow: 0 0 4px 0 black;
     transform: translateY(4px);
   }
-  
-  .ajouterAvis{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 10vh; /* Ceci est juste un exemple, ajustez la hauteur comme vous le souhaitez */
-}
+   */
