--- a/react-app-arnaud/src/components/DetailSalle/bouttonModifierSupprimer/supprimeEvent.module.css
+++ b/react-app-arnaud/src/components/DetailSalle/bouttonModifierSupprimer/supprimeEvent.module.css
@@ -1,18 +1,15 @@
 .bouton {
     background-color: var(--color3);
     border: none;
-    padding: 10px 20px;
+    padding: 25px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 16px;
-    margin-left: 10px;
-    margin-top: 10px;
     cursor: pointer;
     border-radius: 5px;
   }
   
-  .bouton:hover {
+  /* .bouton:hover {
     background-color:  #8c9c7c;;
   }
   
@@ -20,11 +17,5 @@
     background-color:  var(--color3);
     box-shadow: 0 0 4px 0 black;
     transform: translateY(4px);
-  }
+  } */
   
-  .ajouterAvis{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 10vh; /* Ceci est juste un exemple, ajustez la hauteur comme vous le souhaitez */
-}
