--- a/react-app-arnaud/src/components/DetailSalle/Avis/Avis.module.css
+++ b/react-app-arnaud/src/components/DetailSalle/Avis/Avis.module.css
@@ -4,7 +4,7 @@
     justify-content: flex-end;
     align-items:left ;
     width: 67%;
-    height: 11vh;
+    height: 90%;
     padding: 0 1rem;
     overflow: auto;
     background-color:#fdfdfb;
