--- a/app-fini/src/components/mainPage/Main.module.css
+++ b/app-fini/src/components/mainPage/Main.module.css
@@ -3,10 +3,20 @@
   border-radius: 15px;
   width: 80%;
   margin: 10% auto;
+  background: white;
 }
 
 @media screen and (min-width: 768px) {
   .section {
     width: 95%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .sectionDesktop {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5% 3%;
   }
 }
