--- a/app-fini/src/components/mainPage/allCard/AllCard.module.css
+++ b/app-fini/src/components/mainPage/allCard/AllCard.module.css
@@ -35,3 +35,9 @@
     height: 100%;
   }
 }
+
+@media screen and (min-width: 1200px) {
+  .div {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
