--- a/app-fini/src/components/mainPage/searchBar/SearchBar.module.css
+++ b/app-fini/src/components/mainPage/searchBar/SearchBar.module.css
@@ -42,16 +42,40 @@
   .SearchBarContainer {
     display: flex;
     flex-direction: row;
-    padding: 0;
+    padding: 5% 2%;
   }
 
   .SearchBarContainerLabelInput {
-    margin: 3%;
+    margin: 0;
     display: flex;
     align-items: center;
+    width: 80%;
   }
   .btn {
     padding: 2%;
     width: 70%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .SearchBarContainer {
+    margin: 0;
+    padding: 0;
+  }
+
+  .divBtn {
+    margin: 0;
+    padding: 0;
+    width: 20%;
+  }
+  .btn {
+    margin: 0;
+    padding: 5%;
+    width: 100%;
+  }
+
+  .input {
+    padding: 3%;
+    margin-left: 5%;
   }
 }
