--- a/react-app-arnaud/src/components/mainPage/searchBar/SearchBar.module.css
+++ b/react-app-arnaud/src/components/mainPage/searchBar/SearchBar.module.css
@@ -46,7 +46,7 @@
   }
 
   .SearchBarContainerLabelInput {
-    margin: 3%;
+    /* margin: 0%; */
     display: flex;
     align-items: center;
   }
