--- a/app-fini/src/components/addSalle/FormAddSalle.module.css
+++ b/app-fini/src/components/addSalle/FormAddSalle.module.css
@@ -5,7 +5,6 @@
   padding: 4%;
   box-shadow: 0 0 4px 0 black;
   border-radius: 15px;
-  height: 190vh;
 }
 
 .form {
@@ -17,7 +16,7 @@
 
 .label {
   font-size: 20px;
-  margin-top: 2%;
+  margin-top: 3%;
 }
 
 .input {
@@ -35,7 +34,7 @@
 .partie {
   font-size: 24px;
   font-weight: bold;
-  margin-bottom: 2%;
+  margin: 4% 0;
 }
 
 .divSep {
@@ -94,4 +93,25 @@
 .labelStyle {
   font-size: 24px;
   margin-left: 5%;
+}
+
+@media screen and (min-width: 768px) {
+  .section {
+    width: 70%;
+  }
+  .input {
+    margin-top: 3%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    width: 50%;
+  }
+}
+@media screen and (min-width: 1900px) {
+  .section {
+    width: 30%;
+    margin: 3% auto;
+  }
 }
