--- a/app-fini/src/components/detailsPage/calendrier/Calendrier.module.css
+++ b/app-fini/src/components/detailsPage/calendrier/Calendrier.module.css
@@ -1,1 +1,9 @@
-
+@media screen and (min-width: 768px) {
+  .calendrier {
+    /* margin: 0% auto; */
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
