--- a/app-fini/src/components/detailsPage/listeEvent/event/Event.module.css
+++ b/app-fini/src/components/detailsPage/listeEvent/event/Event.module.css
@@ -50,3 +50,11 @@
 .icon {
   height: 20px;
 }
+
+@media screen and (min-width: 768px) {
+  .bouton {
+    width: 0;
+    height: 0;
+    padding: 30%;
+  }
+}
