--- a/app-fini/src/components/mainPage/allCard/AllCard.module.css
+++ b/app-fini/src/components/mainPage/allCard/AllCard.module.css
@@ -41,3 +41,10 @@
     grid-template-columns: repeat(3, 1fr);
   }
 }
+
+@media screen and (min-width: 1900px) {
+  .div {
+    grid-template-columns: repeat(4, 1fr);
+    padding: 3%;
+  }
+}
