--- a/app-fini/src/components/detailsPage/listeAvis/ListeAvis.module.css
+++ b/app-fini/src/components/detailsPage/listeAvis/ListeAvis.module.css
@@ -37,3 +37,13 @@
 .containerBtn {
   display: flex;
 }
+
+@media screen and (min-width: 1900px) {
+  .div {
+    grid-template-columns: repeat(5, 1.5fr);
+  }
+
+  .divBtn {
+    width: 30%;
+  }
+}
