--- a/app-fini/src/components/detailsPage/listeEvent/event/Event.module.css
+++ b/app-fini/src/components/detailsPage/listeEvent/event/Event.module.css
@@ -38,13 +38,10 @@
 .bouton {
   background: var(--color3);
   display: flex;
-  /* padding: 2%; */
   justify-content: center;
   align-items: center;
   border-radius: 15px;
   font-size: 30px;
-  height: 100%;
-  width: 100%;
 }
 
 .icon {
@@ -56,5 +53,26 @@
     width: 0;
     height: 0;
     padding: 30%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .bouton {
+    padding: 25%;
+  }
+}
+
+@media screen and (min-width: 1900px) {
+  .div {
+    padding: 3%;
+  }
+
+  .containerBtn {
+    width: 30%;
+  }
+
+  .bouton {
+    padding: 20%;
+    font-size: 10px;
   }
 }
